[blog] configure for my own usage.

--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,29 @@
 # Title of your blog; shows in the header
-name: "hikari"
+name: "Mera Falacia"
 
 # Description of your content (will only be used on Google Search)
-description: "Fluid, responsive blog theme for Jekyll"
+description: "Blog pessoal de Capi Etheriel"
 
 # Your name. Will show in your footer + sidebar 
-author: "John Doge"
+author: "Capi Etheriel"
 
-url: "http://m3xm.github.io"
-baseurl: "/hikari-for-Jekyll"
+url: "http://0.0.0.0:4000"
+#baseurl: "/"
 
 # A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words. 
-author-bio: "I'm a dog. I develop things. This is my blog so why don't you close this damn side panel (cursed by most UX Designers but I don't care, I do whatever I want) and start reading my awesome stuff?"
+author-bio: "Web Developer, Web Designer, Web Scraper."
 
 # Social Accounts (mine, as placeholders)
 
-twitter: mx3m
-github: m3xm
-dribbble: m3xm
-instagram: m3xm
+twitter: barraponto
+github: barraponto
+# dribbble: barraponto
+# instagram: barraponto
 
 # Google Analytics (you may want to changes these with yours or even delete :)
 
-ga_domain: m3xm.github.io
-ga_tracking_id: UA-47727049-1
+# ga_domain: m3xm.github.io
+# ga_tracking_id: UA-47727049-1
 
 # Other (refer to http://jekyllrb.com/docs/home/ for further details on the below)
 
@@ -31,7 +31,7 @@ markdown: kramdown
 permalink: pretty
 highlighter: pygments
 
-paginate: 10
+paginate: 5
 paginate_path: "/page/:num"
 
 # SCSS
