[blog] support github.io domain.

--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "Blog pessoal de Capi Etheriel"
 # Your name. Will show in your footer + sidebar 
 author: "Capi Etheriel"
 
-url: "http://0.0.0.0:4000"
+url: "http://barraponto.github.io"
 #baseurl: "/"
 
 # A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words. 
