[blog] updated personal info

--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ url: "https://barraponto.blog.br"
 author-bio: |
   Web Developer, Web Designer, Web Scraper.
   Consultor em tecnologias Livres para Web.
-  Contribuidor Drupal, Scrapy, Python.
+  Contribuidor Drupal, Scrapy, Javascript.
 
 # Social Accounts (mine, as placeholders)
 
