[layout] add google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -25,8 +25,8 @@ github: barraponto
 
 # Google Analytics (you may want to changes these with yours or even delete :)
 
-# ga_domain: m3xm.github.io
-# ga_tracking_id: UA-47727049-1
+ga_domain: barraponto.blog.br
+ga_tracking_id: UA-90326540-1
 
 # Other (refer to http://jekyllrb.com/docs/home/ for further details on the below)
 markdown: kramdown
