[layout] fix opengraph author url

--- a/_config.yml
+++ b/_config.yml
@@ -17,6 +17,8 @@ author-bio: |
   Consultor em tecnologias Livres para Web.
   Contribuidor Drupal, Scrapy, Javascript.
 
+author-url: https://www.facebook.com/barraponto
+
 # Social Accounts (mine, as placeholders)
 
 twitter: barraponto
