--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,15 @@
 image: ruby:2.4
 
-before_script:
-  - apt-get update && apt-get install -y locales
-  - echo "en_US UTF-8" > /etc/locale.gen
-  - locale-gen en_US.UTF-8
-  - export LANG=en_US.UTF-8
-  - export LANGUAGE=en_US:en
-  - export LC_ALL=en_US.UTF-8
+variables:
+  BUNDLE_DEPLOYMENT: "true"
+  JEKYLL_ENV: production
+  LC_ALL: C.UTF-8
 
 pages:
   stage: deploy
   script:
     - gem install bundler
-    - bundle install --without development
+    - bundle install
     - bundle exec jekyll build -d public
   artifacts:
     paths:
