[jekyll] fix jekyll-github-metadata site.baseurl

--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: "Blog pessoal de Capi Etheriel"
 author: "Capi Etheriel"
 
 url: "https://barraponto.blog.br"
-baseurl: "/"
+baseurl: ""
 permalink: /:year/:month/:day/:title/
 
 # A short presentation of yourself. Will show in the sidebar, under your name. Best usage would be between 30 to 50 words.
